defer VariableTypeInfoImpl#mainBound initialization